[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reloader"
version = "0.1.3"
description = "reloader allows user program to reload automatically when source code of user program changes"
authors = [{name = "Mohammad Ummair", email = "mohdummair@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["reloader", "autoreload"]
license = {text = "BSD-3-Clause"}
dependencies = ["os", "time", "sys"]


[project.scripts]
my-script = "reloader:__init__"
